--- a/workshop_4_5/FAAVersion1/app/src/main/res/layout/activity_faamain.xml
+++ b/workshop_4_5/FAAVersion1/app/src/main/res/layout/activity_faamain.xml
@@ -12,4 +12,12 @@
         app:layout_constraintTop_toTopOf="parent"
         layout="@layout/toolbar_main" />
 
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
