--- a/workshop_4_5/FAAVersion1/app/src/main/res/layout/toolbar_main.xml
+++ b/workshop_4_5/FAAVersion1/app/src/main/res/layout/toolbar_main.xml
@@ -3,4 +3,5 @@
     android:layout_height="?attr/actionBarSize"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:title="@string/app_name"
+    app:layout_scrollFlags="scroll|enterAlways"
     />
