--- a/workshop_4_5/FAAVersion1/app/src/main/res/layout/fragment_cats.xml
+++ b/workshop_4_5/FAAVersion1/app/src/main/res/layout/fragment_cats.xml
@@ -1,14 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.cats.CatsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <Spinner
+        android:id="@+id/breeds_spinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_column="0"
+        android:layout_columnWeight="50"
+        android:layout_row="0" />
 
-</FrameLayout>
+    <Spinner
+        android:id="@+id/gender_spinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_column="0"
+        android:layout_columnWeight="50"
+        android:layout_row="1" />
+
+    <Spinner
+        android:id="@+id/age_spinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_column="1"
+        android:layout_columnWeight="50"
+        android:layout_row="0" />
+
+    <TextView
+        android:id="@+id/proximity_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_column="1"
+        android:layout_columnWeight="50"
+        android:layout_row="1"
+        android:text="@string/distance"
+        android:textAppearance="@style/MyTextAppearance" />
+</GridLayout>
