--- a/workshop_4_5/FAAVersion1/app/src/main/res/layout/fragment_home.xml
+++ b/workshop_4_5/FAAVersion1/app/src/main/res/layout/fragment_home.xml
@@ -61,6 +61,7 @@
             android:layout_width="wrap_content"
             android:layout_height="500dp"
             android:layout_marginTop="8dp"
+            android:contentDescription="Featured Cat"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
