--- a/workshop_4_5/FAAVersion1/app/src/main/res/layout/fragment_cats.xml
+++ b/workshop_4_5/FAAVersion1/app/src/main/res/layout/fragment_cats.xml
@@ -1,48 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cats_coordinator"
     android:layout_height="match_parent"
-    tools:context=".ui.cats.CatsFragment">
+    android:layout_width="match_parent"
+    >
 
-    <Spinner
-        android:id="@+id/breeds_spinner"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_column="0"
-        android:layout_columnWeight="50"
-        android:layout_row="0" />
+    <GridLayout
+        android:id="@+id/gridLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:columnCount="2"
+        >
 
-    <Spinner
-        android:id="@+id/gender_spinner"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_column="0"
-        android:layout_columnWeight="50"
-        android:layout_row="1" />
+        <Spinner
+            android:id="@+id/breeds_spinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_columnWeight="50"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp" />
 
-    <Spinner
-        android:id="@+id/age_spinner"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_column="1"
-        android:layout_columnWeight="50"
-        android:layout_row="0" />
+        <Spinner
+            android:id="@+id/gender_spinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:layout_columnWeight="50"
+            android:layout_marginTop="8dp" />
 
-    <TextView
-        android:id="@+id/proximity_button"
-        android:layout_width="0dp"
+        <Spinner
+            android:id="@+id/age_spinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_columnWeight="50"
+            android:layout_marginStart="8dp" />
+
+        <TextView
+            android:id="@+id/proximity_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_columnWeight="50"
+            android:text="@string/distance"
+            android:textAppearance="@style/MyTextAppearance" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/cat_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:layout_columnSpan="2"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="?attr/actionBarSize"
+            android:scrollbars="vertical" />
+
+
+    </GridLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_add"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
         android:layout_marginEnd="8dp"
-        android:layout_column="1"
-        android:layout_columnWeight="50"
-        android:layout_row="1"
-        android:text="@string/distance"
-        android:textAppearance="@style/MyTextAppearance" />
-</GridLayout>
+        android:layout_marginBottom="8dp"
+        android:src="@drawable/ic_add_white_24dp"
+        />
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
