--- a/workshop_11/FAA/app/src/main/res/values/integers.xml
+++ b/workshop_11/FAA/app/src/main/res/values/integers.xml
@@ -2,4 +2,6 @@
 <resources>
     <integer name="min_proximity_distance">1</integer>
     <integer name="max_proximity_distance">50</integer>
+
+    <integer name="num_days_recent">30</integer> <!-- number of days considered recent -->
 </resources>
